# Dados-Abertos-Setor-Eletrico-Brasileiro

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  app.ipynb  app.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish-pypi.yml  workflow.yml
dadosAbertosSetorEletrico/: __init__.py  app.ipynb
dados_abertos_setor_eletrico/: app.py
tests/: conftest.py  test_dadosAbertosSetorEletrico.py
