[metadata]
name = dados-abertos-setor-eletrico-brasileiro
version = 0.1.0
author = Diego Neri
author_email = diego.holanda.neri@gmail.com
description = Coleta e tratamento de dados públicos do setor elétrico brasileiro (ONS e ANEEL).
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
url = https://github.com/diegonerii/Dados-Abertos-Setor-Eletrico-Brasileiro

[options]
packages = find:
install_requires =
    requests
    pandas
python_requires = >=3.8
